# human-ai-governance

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: tests.yml
data/: README.md
data/examples/: dossier_demo.json
docs/: PRODUCT.md  PRODUCTO.md  RESULTADOS-ablacion-testimonio.md  RESULTADOS-testimonio.md  RESULTADOS.md  RESULTS-ablation-testimony.md  RESULTS-floodhub.md  RESULTS-testimony.md  RESULTS.md  TAREAS.md  TASKS.md  TESTPLAN.md
docs/ablacion-voz/: consolidado_k1.json  consolidado_k3.json
docs/ablacion-voz/raw/: alert-fatigue-ehr__con_voz_k3.json  alert-fatigue-ehr__sin_voz_k3.json  asiana-214__con_voz_k3.json  asiana-214__sin_voz_k3.json  cierre-cuentas-bancarias__con_voz_k3.json  cierre-cuentas-bancarias__sin_voz_k3.json  gen_alert-fatigue-ehr__con_voz.json  gen_alert-fatigue-ehr__sin_voz.json  gen_asiana-214__con_voz.json  gen_asiana-214__sin_voz.json  gen_cierre-cuentas-bancarias__con_voz.json  gen_cierre-cuentas-bancarias__sin_voz.json  gen_post-office-horizon__con_voz.json  gen_post-office-horizon__sin_voz.json  gen_toeslagenaffaire__con_voz.json  gen_toeslagenaffaire__sin_voz.json  post-office-horizon__con_voz_k3.json  post-office-horizon__sin_voz_k3.json  toeslagenaffaire__con_voz_k3.json  toeslagenaffaire__sin_voz_k3.json  veredicto_alert-fatigue-ehr.json  veredicto_asiana-214.json  veredicto_cierre-cuentas-bancarias.json  veredicto_post-office-horizon.json  veredicto_toeslagenaffaire.json
docs/adr/: ADR-001-agent-or-not.md  ADR-001-agente-o-no.md  ADR-002-diseno-evaluacion.md  ADR-002-evaluation-design.md  ADR-003-manejo-datos-phi.md  ADR-003-phi-data-handling.md  ADR-004-local-llm-provider.md  ADR-004-proveedor-llm-local.md  ADR-005-capa-de-producto-deduplicado.md  ADR-005-dedup-product-layer.md  ADR-006-judge-offers-all-golden.md  ADR-006-juez-ofrece-todos-los-golden.md  ADR-007-ablacion-del-testimonio.md  ADR-007-testimony-ablation.md  ADR-008-mapeo-normativo.md  ADR-008-regulatory-mapping.md  ADR-009-mcp-server.md  ADR-010-inspect-bridge.md
docs/casos-duros/: consolidado.json
docs/casos-duros/raw/: gen_arkansas.json  gen_midas.json  veredicto_arkansas.json  veredicto_midas.json
docs/demo/: google-flood-hub-review.html
docs/floodhub/: consolidado.json
docs/pipeline-codigo/: consolidado_k1.json  consolidado_k3.json
docs/pipeline-codigo/raw/: alert-fatigue-ehr_k1.json  alert-fatigue-ehr_k3.json  arkansas-medicaid_k1.json  arkansas-medicaid_k3.json  asiana-214_k1.json  asiana-214_k3.json  cierre-cuentas-bancarias_k1.json  cierre-cuentas-bancarias_k3.json  concern-cds_k1.json  concern-cds_k3.json  midas-michigan_k1.json  midas-michigan_k3.json  post-office-horizon_k1.json  post-office-horizon_k3.json  resumen_k1.json  resumen_k3.json  robodebt-hard_k1.json  robodebt-hard_k3.json  toeslagenaffaire_k1.json  toeslagenaffaire_k3.json
evals/inspect/: README.md  hax_pair_review.py
scripts/: ablacion_report.py  coverage_report.py  dedup_llm_report.py  dedup_report.py  export_adjudicacion.py  rejudge.py
src/interaction_review/: __init__.py  ablation.py  cli.py  dedup.py  dedup_llm.py  ingest.py  judge.py  llm.py  mcp_server.py  metrics.py  prompts.py  regulatory.py  report.py  report_html.py  router.py  runner.py  schemas.py  smart_ingest.py
src/interaction_review/approaches/: __init__.py  _generator.py  a4_agent.py  b0_checklist.py  b1_single_prompt.py  b1x_exhaustivo.py  b2_few_shot.py  p3_neutral.py  p3_pipeline.py
src/interaction_review/guidelines/: __init__.py  hax18.yaml  loader.py  pair.yaml  regulatory_map.yaml
templates/: 01_ficha_sistema__perfil_tecnico.md  01_system_card__technical_profile.md  02_experiencia_uso__usuario_final.md  02_usage_experience__end_user.md  03_document_inventory.md  03_inventario_documentos.md  README.md  dossier_plantilla.json
tests/: test_ablation.py  test_b0.py  test_cli.py  test_dedup.py  test_dedup_llm.py  test_external_cases.py  test_f2.py  test_guidelines.py  test_ingest.py  test_inspect_eval.py  test_llm.py  test_mcp_server.py  test_metrics.py  test_regulatory.py  test_report_html.py  test_router.py  test_schemas.py  test_smart_ingest.py
