[project]
name = "interaction-review"
version = "0.0.1"
description = "Revisor de la capa de interaccion humano-IA: evalua un sistema de IA contra guidelines HAX-18 y PAIR."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Miguel Ferreiro Garcia" }]
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6,<7",
    # SDK del LLM nube. No se usa en F0 (B0 es determinista) pero se fija ya porque
    # es nucleo del proyecto a partir de F2 (B1/B2).
    "anthropic>=0.40,<1",
    # Backend local (Ollama /api/chat). Ya venia transitiva via anthropic; se
    # declara explicita porque se usa directamente (ADR-004).
    "httpx>=0.27,<1",
    # Lectura de PDF para la ingesta inteligente (documento -> plantilla prerrellena).
    # Puro Python, sin binarios; solo se usa en `prerrellenar`.
    "pypdf>=4,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
interaction-review = "interaction_review.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interaction_review"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
