[project]
name = "interaction-review"
version = "0.0.1"
description = "Human-AI interaction layer reviewer: evaluates an AI system against HAX-18 and PAIR guidelines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Miguel Ferreiro Garcia" }]
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6,<7",
    # Cloud LLM SDK. Not used in F0 (B0 is deterministic) but pinned already because
    # it is core to the project from F2 on (B1/B2).
    "anthropic>=0.40,<1",
    # Local backend (Ollama /api/chat). It already came in transitively via anthropic;
    # declared explicitly because it is used directly (ADR-004).
    "httpx>=0.27,<1",
    # PDF reading for smart ingestion (document -> pre-filled template).
    # Pure Python, no binaries; only used in `prefill`.
    "pypdf>=4,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
interaction-review = "interaction_review.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interaction_review"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
